[package]
name = "ballistics-engine-py"
version = "0.13.4"
edition = "2021"
authors = ["Alex Jokela <email@tinycomputers.io>"]
description = "Python bindings for ballistics-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajokela/ballistics-engine-py"

[lib]
name = "ballistics_engine_py"
crate-type = ["cdylib"]

[dependencies]
ballistics-engine = "0.13"
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
